trunk/Archive2/f6/cdb7ce5d5b8c6c/output
main.cpp: In function 'int main()':
main.cpp:4:31: error: invalid operands of types 'long int*' and 'long unsigned int' to binary 'operator%'
     ((&variable) % sizeof(long));
                               ^
